force-app/main/default/objects/custom_create241__c/custom_create241__c.object-meta.xml
<CustomObject>
    <label>Custom created object241</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects241</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>