force-app/main/default/objects/custom_create241__c/fields/custom_create_241field713__c.field-meta.xml
<CustomField>
    <fullName>custom_create_241field713__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 241field713</label>
    <type>Checkbox</type>
</CustomField>